# erp-admin

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2bc3a9c80deb_added_title_and_job_position_to_the_.py  2d2cb9dbb154_added_password_to_admins_table.py  3404d9237680_added_password_to_admin_table_again.py  3eb35884d5d1_added_creator_to_user_talbe.py  3f9a004cbde7_removed_verifier_from_users_to_admins.py  574f82ec5b09_removed_has_portal_access_field_from_.py  5e4aa4ed0d04_added_creator_to_the_payments_table.py  7325664f4a84_added_creator_to_documents.py  83555b95de21_added_creator_to_kyc_accounts.py  85f0706ce83b_made_portal_access_not_null.py  870894ee9fd1_added_password_again.py  8e3a8f31c700_added_creator_to_companies.py  8f7734f81d9a_added_transactions_and_payments_tables.py  98b86415eafd_added_nia_verification_status_to_users_.py  a045c18b1d87_add_transactions_and_user_relationship.py  a4963bfce4b4_added_transactional_currency_and_.py  (+8 more)
api/v1/router/: admins.py  (+5 more)
config/: setting.py
consumer/: streams.py
controller/: admins.py  companies.py  documents.py  kyc_accounts.py  payments.py  transactions.py  users.py
core/: setup.py  start_app.py
handler/: exception.py
models/: admins.py  companies.py  custom_base.py  documents.py  kyc_accounts.py  payments.py  roles.py  sample_model.py  transactions.py  users.py
schemas/: admins.py  common.py  companies.py  documents.py  kyc_accounts.py  payments.py  users.py
services/: auditlog.py  kafka.py  s3.py  stream.py
tools/: log.py  redis.py
utils/: auth.py  common.py  default.py  filter.py  sql.py
