[tool.poetry]
name = "quantum-fastapi-base"
version = "0.1.0"
description = "base app for fastapi applications"
authors = ["fansah <fansah@quantumgroupgh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
tenacity = "^9.0.0"
kafka-python = "^2.0.5"
boto3 = "^1.37.1"
redis = "^5.2.1"
fastapi-pagination = "^0.12.34"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
